--- a/menu/menuapp/templates/menuapp/menu.html
+++ b/menu/menuapp/templates/menuapp/menu.html
@@ -1,4 +1,4 @@
-<ul>
+<div class='menu'>
     {% for item in menu %}
         {% if item.indent %}
           <ul>
@@ -12,4 +12,4 @@
             </a>
         {% endif %}
     {% endfor %}
-</ul>
+</div>
